Minor changes to sca api integration test

--- a/api/test/integration/test_sca_endpoints.tavern.yaml
+++ b/api/test/integration/test_sca_endpoints.tavern.yaml
@@ -933,6 +933,8 @@ stages:
           affected_items:
             - <<: *sca_check_result_002
             - <<: *sca_check_result_002
+            - <<: *sca_agent_result_002
+            - <<: *sca_agent_result_002
           failed_items: []
           total_failed_items: 0
 
@@ -953,6 +955,7 @@ stages:
           total_affected_items: !anyint
           affected_items:
             - <<: *sca_check_result_002
+            - <<: *sca_agent_result_002
           failed_items: []
           total_failed_items: 0
 
@@ -1480,6 +1483,8 @@ stages:
           affected_items:
             - <<: *sca_check_result_003
             - <<: *sca_check_result_003
+            - <<: *sca_check_result_003
+            - <<: *sca_check_result_003
           failed_items: []
           total_failed_items: 0
 
@@ -1499,6 +1504,7 @@ stages:
         data:
           total_affected_items: !anyint
           affected_items:
+            - <<: *sca_check_result_003
             - <<: *sca_check_result_003
           failed_items: []
           total_failed_items: 0
