--- a/api/test/integration/test_sca_endpoints.tavern.yaml
+++ b/api/test/integration/test_sca_endpoints.tavern.yaml
@@ -955,7 +955,7 @@ stages:
           total_affected_items: !anyint
           affected_items:
             - <<: *sca_check_result_002
-            - <<: *sca_agent_result_002
+            - <<: *sca_check_result_002
           failed_items: []
           total_failed_items: 0
 
